--- a/flex-cards/styles/flex-card.css
+++ b/flex-cards/styles/flex-card.css
@@ -1,3 +1,12 @@
+:root {
+    --main-text-font: Arial, Helvetica, sans-serif;
+    --main-panel-width: 50%;
+}
+
+body {
+    font-family: var(--main-text-font);
+}
+
 .flex {
     display: flex;
     flex-wrap: wrap;
@@ -11,9 +20,11 @@
     background-color: rgb(218, 180, 122);
     margin: 10px;
     width: 18rem;
+    border-radius: 5px;
 }
 
 .panel {
     background-color: rgb(206, 192, 171);
-    width: 50%;
+    width: var(--main-panel-width);
+    border-radius: 5px;
 }
